gcc/testsuite/gdc.test/compilable/imports/test15857c.d
void bar15857(string) {}
