gcc/testsuite/gdc.test/fail_compilation/fail359.d
#line 5 _BOOM
void main() { }

